@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2014,v 1.434 2014/01/25 13:54:48 ryoon Exp $
+$NetBSD: CHANGES-2014,v 1.435 2014/01/26 00:06:32 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2014:
 
@@ -518,3 +518,4 @@ Changes to the packages collection and infrastructure in 2014:
 	Removed math/gcalctool-gtk3 successor math/gnome-calculator [prlw1 2014-01-25]
 	Updated lang/gcc46 to 4.6.4 [ryoon 2014-01-25]
 	Updated lang/openjdk7 to 1.7.51 [ryoon 2014-01-25]
+	Removed devel/py-fann [wiz 2014-01-26]
